@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-19T16:10:39Z",
-  "count" : 3,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2024-05-20T00:41:06Z",
+  "count" : 5,
+  "count_minmax" : [ 1, 5 ],
+  "count_decinc" : [ -0, +5 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
