@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-19T16:10:39Z",
+  "timestamp" : "2024-05-20T00:41:06Z",
   "count_outdated" : 7666,
   "uniques_outdated" : 3323,
-  "count" : 7727,
-  "uniques" : 3373,
+  "count" : 7729,
+  "uniques" : 3374,
   "clones" : [
     {
       "timestamp": "2024-05-06T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2024-05-19T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
