@@ -1,6 +1,6 @@
 {
-  "count": 61,
-  "uniques": 37,
+  "count": 63,
+  "uniques": 38,
   "clones": [
     {
       "timestamp": "2024-05-06T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2024-05-19T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
